[project]
name = "llmx"
version = "0.1.0"
description = "CLI tool for managing MLX-LM models and servers"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "mlx-lm>=0.0.3",
    "huggingface-hub>=0.20.0",
]
requires-python = ">=3.8"

[project.scripts]
llmx = "llmx.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 