[project]
name = "llmx"
version = "0.1.0"
description = "CLI tool for managing MLX-LM models and servers"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.31.0",
    "rich>=13.0.0",
    "mlx-lm>=0.0.3",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
llmx = "llmx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true 